# hello-fastapi

./: README.md  database.db  main.py  note.md  pyproject.toml
.github/: copilot-instructions.md
app/: config.py  database.py  main.py
app/mentoring_platform/: schema.mmd
app/mentoring_platform/core/: security.py
app/mentoring_platform/models/: member.py  mentor.py  mentoring_post.py  mentoring_post_topic.py  mentoring_request.py  social_account.py  topic.py
app/mentoring_platform/routers/: auth.py  member.py
app/mentoring_platform/schemas/: auth.py  common.py  member.py
app/mentoring_platform/services/: auth.py  member.py
app/models/: company.py  job_post.py  todo.py  user.py
app/routers/: company.py  job_post.py  todo.py  user.py
app/storage/: todo.py  user.py
notes/: day-04-2-질문.md  day04-1-개인 정리.md  day04-ORM & SQLModel.md  day05-1-트랜잭션 정리.md  w1d1-fastapi 시작하기.md  w1d2-의존성(DI).md  w1d3-1-질문.md  w1d3-swagger 관리.md  w1d5-DB 비동기 세션.md  w1d6-데이터 무결성.md  w1d7-인덱스.md  w2d1-DTO.md  w2d2-DI 객체 생명 주기.md  w2d3-보안.md
playground/w1d6-job-platform/: README.md  database.db  database.py  main.py  planning-document.md  pyproject.toml  schema.mmd
playground/w1d6-job-platform/models/: application.py  company.py  job_post.py  job_post_tag.py  member.py  tag.py
playground/w1d6-job-platform/routers/: company.py  job_post.py
