[project]
name = "w1d6-job-platform"
version = "0.1.0"
description = "Week 1 Day 6 FastAPI practice project for SQLModel, database schema design, constraints, and CRUD flows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.2",
    "greenlet>=3.3.2",
    "sqlmodel>=0.0.38",
]
